Load OFX DTDs from AppImage filesystem

In AppImage mode LibOFX needs to be instructed to search the DTD files
inside the AppImage file instead of the root filesystem.

BUG: 416827
FIXED-IN: 5.0.9